feat(explore): ask more questions; auto-fill answers
